...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Tdx-ZX-x7C" secondAttribute="trailing" id="dbx-ch-LkA"/>
                            <constraint firstItem="2u8-R2-JBe" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="50" id="okz-Qa-RfK"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Tdx-ZX-x7C" secondAttribute="bottom" constant="16" id="zym-dO-z0U"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Rock Tracks" id="L1Z-z6-bR4"/>
                    <connections>
                        <outlet property="aiLoadingIndicator" destination="iZZ-3X-fck" id="91u-ux-x89"/>
                        <outlet property="lbLoadingMessage" destination="2u8-R2-JBe" id="2ab-po-x1V"/>
                        <outlet property="tvTracks" destination="Tdx-ZX-x7C" id="yX5-Xr-gOb"/>
                        <segue destination="U1N-gs-emZ" kind="show" identifier="segueToTrackDetail" id="1ML-H1-lxz"/>
                    </connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdx-4P-lRl">
                                <rect key="frame" x="8" y="329" width="304" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="KJf-DU-Iza"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="More details"/>
                                <connections>
                                    <action selector="showTrackDetails:" destination="U1N-gs-emZ" eventType="touchUpInside" id="myB-bf-XYr"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
