...
    
    /* Customize the view visual style */
    func customizeViewStyle() {
        view.backgroundColor = UIColor.backgroundColor()
        
        let backItem = UIBarButtonItem()
        backItem.title = NSLocalizedString("Back", comment: "")
        navigationItem.backBarButtonItem = backItem
        
        tvTracks.separatorColor = .clear
        aiLoadingIndicator.color = UIColor.institutionalGreenColor()
        lbLoadingMessage.textColor = UIColor.institutionalGreenColor()
    }
...
